# FJDTrionModel

fj_pc_software/FJDTrionModel/: CMakeLists.txt  README.md  config.cmake
fj_pc_software/FJDTrionModel/bin-x64/theme/: config.ini  dockconfig.ini  themestyle.qss
fj_pc_software/FJDTrionModel/ccViewer/: CMakeLists.txt  ccviewer.cpp  ccviewerlog.h  main.cpp
fj_pc_software/FJDTrionModel/ccViewer/ui_templates/: ccviewer.ui
fj_pc_software/FJDTrionModel/ccqfc_softlink/: CMakeLists.txt  ccqfc_softlink.pro
fj_pc_software/FJDTrionModel/ccqfc_softlink/crashreporter/: CMakeLists.txt
fj_pc_software/FJDTrionModel/ccqfc_softlink/csaggregation/: CMakeLists.txt  csaggregation.pro
fj_pc_software/FJDTrionModel/ccqfc_softlink/csutils/: CMakeLists.txt  csutils.pro
fj_pc_software/FJDTrionModel/ccqfc_softlink/cswidgets/: CMakeLists.txt
fj_pc_software/FJDTrionModel/ccqfc_softlink/ncspdlog/: CMakeLists.txt
fj_pc_software/FJDTrionModel/ccqfc_softlink/nqspdlog/: CMakeLists.txt
fj_pc_software/FJDTrionModel/ccqfc_softlink/qpdflib/: CMakeLists.txt  qpdflib.pro
fj_pc_software/FJDTrionModel/ccqfc_softlink/quazip/: CMakeLists.txt
fj_pc_software/FJDTrionModel/ccqfc_softlink/sentinelldkencrypt/: CMakeLists.txt
fj_pc_software/FJDTrionModel/ccqfc_softlink/spdlog/: CMakeLists.txt
fj_pc_software/FJDTrionModel/cmake/: DeployQt.cmake  Saribbon.cmake  ccdb_dependencies.cmake  ccqfc_dependencies.cmake  configShare.cmake  libs_dependencies.cmake  outputconfig.cmake
fj_pc_software/FJDTrionModel/libs/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/CCAppCommon/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/CCFbo/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/CCPluginAPI/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/CCPluginStub/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/cloudcompareres/: CMakeLists.txt  cloudcompareres.cmake  cloudcompareres.pro  cloudcompareres_dependencies.cmake  cloudcompareres_dependencies.pri  cloudcompareres_global.h  cloudcompareres_lib.pri  cloudcompareresconstants.h  resourcedefine.cpp  resourcedefine.h
fj_pc_software/FJDTrionModel/libs/cloudcompareutils/: CMakeLists.txt  cloudcompareutils.cmake  cloudcompareutils.pro  cloudcompareutils_dependencies.cmake  cloudcompareutils_dependencies.pri  cloudcompareutils_global.h  cloudcompareutils_lib.pri  exportdatatofile.cpp  exportdatatofile.h  icore.cpp  icore.h  publicutils.cpp  publicutils.h  serailizable.h  stylehelper.cpp  stylehelper.h  theming.cpp  theming.h
fj_pc_software/FJDTrionModel/libs/cloudcomparewidgets/: CMakeLists.txt  cloudcomparewidgets.cmake  cloudcomparewidgets.cpp  cloudcomparewidgets.h  cloudcomparewidgets.pro  cloudcomparewidgets_dependencies.cmake  cloudcomparewidgets_dependencies.pri  cloudcomparewidgets_global.h  cloudcomparewidgets_lib.pri  gallerybutton.cpp  gallerybutton.h  gallerypreviewdialog.cpp  gallerypreviewdialog.h  imagepreview.cpp  imagepreview.h  metahubabout.cpp  metahubabout.h  metahubframelesswaitdialog.cpp  metahubframelesswaitdialog.h  metahublframelessdialog.cpp  metahublframelessdialog.h  metahubmemorysharing.cpp  metahubmemorysharing.h  metahubmessbox.cpp  metahubmessbox.h  metahubnotedialog.cpp  metahubnotedialog.h
fj_pc_software/FJDTrionModel/libs/metahubcomputecl/: CMakeLists.txt  computeopenclhelper.cpp  computeopenclhelper.h  metahubcomputecl.cmake  metahubcomputecl.cpp  metahubcomputecl.h  metahubcomputecl_dependencies.cmake  metahubcomputecl_dependencies.pri  metahubcomputecl_global.h
fj_pc_software/FJDTrionModel/libs/model/: CMakeLists.txt  metahubclippingboxsegmentation.cpp  metahubclippingboxsegmentation.h  model.cmake  model_dependencies.cmake  modelchangedlocker.h  planecutting.cpp  planecutting.h  projectmodel.cpp  projectmodel.h
fj_pc_software/FJDTrionModel/libs/modelcontrol/: CMakeLists.txt  cchobjectcontrol.cpp  cchobjectcontrol.h  modelcontrol.cmake  modelcontrol.pro  modelcontrol_dependencies.cmake  modelcontrol_global.h  modelcontrol_lib.pri
fj_pc_software/FJDTrionModel/libs/qCC_db/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/qCC_glWindow/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/qCC_io/: CMakeLists.txt
fj_pc_software/FJDTrionModel/libs/reportdocument/: CMakeLists.txt  document.cpp  document.h  excelaxdocument.cpp  excelaxdocument.h  excelxlsdocument.cpp  excelxlsdocument.h  pdfdocument.h  reportdocument.cmake  reportdocument.cpp  reportdocument.h  reportdocument_dependencies.cmake  reportdocument_global.h  txtdocument.cpp  txtdocument.h
fj_pc_software/FJDTrionModel/plugins/: CMakeLists.txt
fj_pc_software/FJDTrionModel/plugins/cmake/: Plugins.cmake
fj_pc_software/FJDTrionModel/qModel/: C2DFlatDrawProxy.cpp  C2DFlatDrawProxy.h  CMakeLists.txt  PointSizedialog.cpp  PointSizedialog.h  StackTracer.cpp  StackTracer.h  cc2.5DimEditor.cpp  cc2.5DimEditor.h  ccApplication.cpp  ccApplyTransformationDlg.cpp  ccClippingBoxTool.cpp  ccClippingBoxTool.h  ccColorGradientDlg.cpp  ccColorGradientDlg.h  ccCommandLineCommands.cpp  ccCommandLineParser.cpp  ccCommandRaster.cpp  ccComparisonDlg.cpp  ccConsole.cpp  ccEntityAction.cpp  ccFillHoleDlg.cpp  ccFillHoleDlg.h  ccFillHolesInputDlg.cpp  ccFillHolesInputDlg.h  ccGraphicalSegmentationTool.cpp  ccGraphicalSegmentationTool.h  ccGraphicalTransformationTool.cpp  ccGraphicalTransformationTool.h  ccHistogramWindow.cpp  ccLabelingDlg.cpp  ccLabelingDlg.h  ccLibAlgorithms.cpp  ccMergeQuestionDlg.cpp  ccMergeQuestionDlg.h  ccPointAccuracyVerificationDlg.cpp  ccPointAccuracyVerificationDlg.h  ccPointListPickingDlg.cpp  ccPointPairRegistrationDlg.cpp  ccPointPairRegistrationDlg.h  (+97 more)
fj_pc_software/FJDTrionModel/qModel/db_tree/: ccDBRoot.cpp  ccDBRoot.h  ccPropertiesTreeDelegate.cpp  ccPropertiesTreeDelegate.h  matrixDisplayDlg.cpp  sfEditDlg.cpp
fj_pc_software/FJDTrionModel/qModel/pluginManager/: ccPluginUIManager.cpp  ccPluginUIManager.h
fj_pc_software/FJDTrionModel/qModel/translations/: CMakeLists.txt  FJDTrionModel_es.ts  FJDTrionModel_it.ts  FJDTrionModel_ja.ts  FJDTrionModel_ru.ts  FJDTrionModel_zh.ts  FJDTrionModel_zh_TW.ts
(+333 files in other folders)
