add_subdirectory(crashreporter)
SET(CRASHREPORTER_TARGET_LINK ${CRASHREPORTER_TARGET_LINK} PARENT_SCOPE)

add_subdirectory(sentinelldkencrypt)
SET(SENTINELLDKENCRYPT_TARGET_LINK ${SENTINELLDKENCRYPT_TARGET_LINK} PARENT_SCOPE)

add_subdirectory(csaggregation)
SET(CSAGGREGATION_TARGET_LINK ${CSAGGREGATION_TARGET_LINK} PARENT_SCOPE)

add_subdirectory(csutils)
SET(CSUTILS_TARGET_LINK ${CSUTILS_TARGET_LINK} PARENT_SCOPE)

add_subdirectory(cswidgets)
SET(CSWIDGETS_TARGET_LINK ${CSWIDGETS_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(ncspdlog)
SET(NCSPDLOG_TARGET_LINK ${NCSPDLOG_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(nqspdlog)
SET(NQSPDLOG_TARGET_LINK ${NQSPDLOG_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(spdlog)
SET(SPDLOG_TARGET_LINK ${SPDLOG_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(qpdflib)
SET(QPDFLIB_TARGET_LINK ${QPDFLIB_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(quazip)
SET(QUAZIP_TARGET_LINK ${QUAZIP_TARGET_LINK} PARENT_SCOPE)

IF (MSVC)
	set(PROJECT_PATH ${PROJECT_PATH} PARENT_SCOPE)
ENDIF()




