
add_subdirectory(metahubcomputecl)
add_subdirectory(reportdocument)
add_subdirectory(cloudcompareres)
add_subdirectory(cloudcompareutils)
add_subdirectory( Saribbon)
add_subdirectory( CCAppCommon)
add_subdirectory( CCFbo )
add_subdirectory( CCPluginStub )    # Must come before CCPluginAPI
add_subdirectory( CCPluginAPI )
add_subdirectory( qCC_db )
add_subdirectory(model)
add_subdirectory( qCC_glWindow )
add_subdirectory(modelcontrol)
add_subdirectory(cloudcomparewidgets)
add_subdirectory( qCC_io )




